--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "nuxt": "^3.12.2",
     "ohash": "^1.1.3",
+    "uncrypto": "^0.1.3",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
   },
